--- a/qof/debian/changelog
+++ b/qof/debian/changelog
@@ -1,3 +1,9 @@
+qof (0.8.0-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Neil Williams <linux@codehelp.co.uk>  Wed, 13 Sep 2006 22:45:50 +0100
+
 qof (0.7.1-2) unstable; urgency=low
 
   * Fix priority setting of the two new backend packages. 
