--- a/qof/debian/changelog
+++ b/qof/debian/changelog
@@ -1,8 +1,14 @@
+qof (0.7.1-3) unstable; urgency=low
+
+  * debian/control: Fix circular dependency (Closes: #387196)
+
+ -- Goedson Teixeira Paixao <goedson@debian.org>  Fri, 15 Sep 2006 10:32:20 -0300
+
 qof (0.7.2-1) unstable; urgency=low
 
   * New upstream release.
 
- -- Neil Williams <linux@codehelp.co.uk>  Wed, 13 Sep 2006 23:08:27 +0100
+ -- Neil Williams <linux@codehelp.co.uk>  Thu, 14 Sep 2006 09:48:11 +0100
 
 qof (0.7.1-2) unstable; urgency=low
 
