--- a/qof/emdebian/changelog
+++ b/qof/emdebian/changelog
@@ -1,3 +1,22 @@
+qof (0.7.2-1) unstable; urgency=low
+
+  * New upstream release.
+  - upgrade binNMU support to avoid deprecated Source-Version
+
+ -- Neil Williams <linux@codehelp.co.uk>  Mon, 18 Sep 2006 21:00:14 +0100
+
+qof (0.7.1-3) unstable; urgency=low
+
+  * debian/control: Fix circular dependency (Closes: #387196)
+
+ -- Goedson Teixeira Paixao <goedson@debian.org>  Fri, 15 Sep 2006 10:32:20 -0300
+
+qof (0.7.1-2) unstable; urgency=low
+
+  * Fix priority setting of the two new backend packages. 
+
+ -- Neil Williams <linux@codehelp.co.uk>  Tue, 12 Sep 2006 00:12:46 +0100
+
 qof (0.7.1-1) unstable; urgency=low
 
   * New upstream release. 
