--- a/qof/po/ChangeLog
+++ b/qof/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-28  Daniel Nylander <po@danielnylander.se>
+
+	* sv.po : Updated Swedish translation for 0.7.2
+
 2006-07-24 Laurentiu Buzdugan <lbuz@rolix.org>
 
 	* ro.po : New Romanian translation.
