--- a/qof/po/ChangeLog
+++ b/qof/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-29  Tedi Heriyanto <tedi_heriyanto@yahoo.com>
+
+	* id.po : New Indonesian translation.
+
 2006-09-28  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po : Updated Swedish translation for 0.7.2
